# mailing-lists-sieve

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  TODO  configure.ac
doc/: mailing-lists-sieve.texinfo
src/: generators.c  mailing-lists-sieve.c  mailing-lists-sieve.h  uploaders.c
src/generators/: listserv.c  sample.c
src/uploaders/: managesieve.c  timsieved_fs.c
